--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 dependencies {
-    // spring boot
+    // SpringBoot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -28,11 +28,14 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // h2
+    // H2
     runtimeOnly 'com.h2database:h2'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Guava
+    implementation("com.google.guava:guava:31.1-jre")
 }
 
 tasks.named('test') {
